[project]
name = "csrankings-updater"
version = "0.1.0"
description = "Script (eventual GUI) to add/remove faculty from CSRankings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "levenshtein>=0.27.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
exclude = [
    ".txt",
    ".ruff_cache",
    "__pycache__",
    "env",
]
select = [
    "ALL",
]
ignore = [
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "D203",
    "D212",
    "D401",
    "E501",
    "ERA001",
    "F403",
    "F405",
    "F841",
    "PLR0912",
    "PLR0915",
    "PLR2004",

    #### linter
    "COM812"
]
